--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,6 @@ all_extras = [
     "xarray",
     "seasonal",
     "scikit-optimize",
-    "torch",
 ]
 
 all_extras_pandas2 = [
@@ -172,6 +171,10 @@ docs = [
 
 dl = [
     "tensorflow",
+]
+
+pytorch = [
+    "torch",
 ]
 
 pandas1 = [
